tests/reference/asr-array_shape_01-214f2d0.stderr
semantic error: Different shape for array assignment on dimension 1(3 and 2)
 --> tests/errors/array_shape_01.f90:3:1
  |
3 | x = reshape([1,2,3,4],[2,2])
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
